--- a/src/index.html
+++ b/src/index.html
@@ -244,15 +244,15 @@
                 <div class="form-column">
                     <div class="form-main__item">
                         <label for="input_1" class="form__subtitle form__subtitle__grey">Имя:</label>
-                        <input tabindex="1" value="" id="input_1" type="text" name="mainName" class="form-main__input" placeholder="Введите Ваше имя" autocomplete="off" onfocus="if (this.placeholder == 'Введите Ваше имя') {this.placeholder = '';}" onblur="if (this.placeholder == '') {this.placeholder = 'Введите Ваше имя';}">
+                        <input tabindex="1" value="" id="input_1" type="text" name="name" class="form-main__input" placeholder="Введите Ваше имя" autocomplete="off" onfocus="if (this.placeholder == 'Введите Ваше имя') {this.placeholder = '';}" onblur="if (this.placeholder == '') {this.placeholder = 'Введите Ваше имя';}">
                     </div>
                     <div class="form-main__item">
                         <label for="input_2" class="form__subtitle form__subtitle__grey">Номер телефона:</label>
-                        <input tabindex="2" value="" id="input_2" type="tel" name="mainTelephone" class="form-main__input" placeholder="+7 (903) - 28|" autocomplete="off" onfocus="if (this.placeholder == '+7 (903) - 28|') {this.placeholder = '';}" onblur="if (this.placeholder == '') {this.placeholder = '+7 (903) - 28|';}">
+                        <input tabindex="2" value="" id="input_2" type="tel" name="tel" class="form-main__input" placeholder="+7 (903) - 28|" autocomplete="off" onfocus="if (this.placeholder == '+7 (903) - 28|') {this.placeholder = '';}" onblur="if (this.placeholder == '') {this.placeholder = '+7 (903) - 28|';}">
                     </div>
                     <div class="form-main__item">
                         <label for="input_3" class="form__subtitle form__subtitle__grey">E-mail:</label>
-                        <input tabindex="3" value="" id="input_3" type="email" name="mainEmail" class="form-main__input" placeholder="example@mail.ru" autocomplete="off" onfocus="if (this.placeholder == 'example@mail.ru') {this.placeholder = '';}" onblur="if (this.placeholder == '') {this.placeholder = 'example@mail.ru';}">
+                        <input tabindex="3" value="" id="input_3" type="email" name="email" class="form-main__input" placeholder="example@mail.ru" autocomplete="off" onfocus="if (this.placeholder == 'example@mail.ru') {this.placeholder = '';}" onblur="if (this.placeholder == '') {this.placeholder = 'example@mail.ru';}">
                     </div>
                 </div>
 
@@ -334,6 +334,7 @@
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
