--- a/src/index.html
+++ b/src/index.html
@@ -229,13 +229,13 @@
             </div>
         </section>
     
-        <!-- <section class="about" id="about">
+        <section class="about" id="about">
             <div class="container">
                 <div class="title">О нас</div>
                 <div class="about__wrapper">
                     <img src="img/about/about_img.jpg" alt="about" class="about__img">
                     <div class="about__text">
-                        <p class="about__p nopadding">Друзья, приветствую Вас на&nbspсвоем сайте!</p>
+                        <p class="about__p">Друзья, приветствую Вас на&nbspсвоем сайте!</p>
                         <p class="about__p">Если Вы читаете эти строки, то, возможно, Вы садовый фанат и&nbspищете что-нибудь интересное для своей новой или старой цветочной клумбы…Ну а если Вы еще и&nbspлюбитель пионов, то нам будет легко с Вами найти общий язык.</p>
                         <p class="about__p">Давайте знакомиться! <br>
                             Я, Христина Несмеянова, приветствую Вас на своем сайте Peones.ru, который&nbspполучил свое названия от слияния двух слов «Peony» и «Nesmeyanova» в&nbspодно “Peones”. Как Вы понимаете, пионы – это мое увлечение, и эта страница его&nbspлогическое продолжение.</p>
@@ -244,7 +244,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     
         <!-- <section class="form" id="contacts">
             <div class="container-form">
